--- a/BuddyBot/src/Site.css
+++ b/BuddyBot/src/Site.css
@@ -1,5 +1,26 @@
 ﻿body {
+    width: 80%;
+    margin: auto;
+    background-color: #f9f9f9;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+.flex-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+}
+
+.wrapper-container {
+    justify-content: center;
+}
+
+.about-container {
+    width: 60%;
+}
+
+.webchat-container{
+    width: 40%;
 }
 
 
@@ -11,4 +32,5 @@
     overflow: auto;
     border-radius: 5px;
     box-shadow: 1px 5px 8px 1px #cecece;
+    background-color: white;
 }
