--- a/BuddyBot/src/Site.css
+++ b/BuddyBot/src/Site.css
@@ -5,10 +5,17 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+#webchat,
+#webchat > * {
+    height: 100%;
+    width: 100%;
+}
+
 .flex-container {
     display: flex;
     justify-content: center;
     margin-top: 5%;
+    height: 70vh;
 }
 
 .wrapper-container {
@@ -29,8 +36,9 @@
     margin-bottom: 0;
 }
 
-.sub-title{
+.sub-title {
     margin-top: 5px;
+    font-weight: 300;
 }
 
 .error-well {
@@ -47,11 +55,6 @@
 
 
 #webchat {
-    float: left;
-    position: relative;
-    height: 600px;
-    width: 400px;
-    overflow: auto;
     border-radius: 5px;
     box-shadow: 1px 5px 8px 1px #cecece;
     background-color: white;
