--- a/BuddyBot/src/Site.css
+++ b/BuddyBot/src/Site.css
@@ -1,8 +1,9 @@
 ﻿body {
-    width: 80%;
+    /*width: 100%;*/
     margin: auto;
     /*background-color: #f9f9f9; TODO - Decide on background color */
-    background-color: #E5E9F0;
+    /*background-color: #E5E9F0;*/
+    background-color: white;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
@@ -15,8 +16,7 @@
 .flex-container {
     display: flex;
     justify-content: center;
-    margin-top: 5%;
-    height: 70vh;
+    height: 100vh;
 }
 
 .wrapper-container {
@@ -24,33 +24,46 @@
 }
 
 .webchat-wrapper {
-    height: 100%;
+    height: 80%;
     margin: 10% 15%;
 }
 
 .about-container {
+    margin-top: 2.5%;
     padding: 10px 25px;
     width: 60%;
 }
 
-.webchat-container{
+.webchat-container {
     width: 40%;
+    background-color: #E5E9F0;
+    box-shadow: inset 3px 0px 10px 1px #c5c2c2;
 }
 
-.main-title{
-    font-size: 48px;
-    margin-bottom: 0;
+.bot-avatar {
+    margin: auto;
+    display: flex;
+    width: 20%;
+}
+
+.main-title {
+    font-size: 70px;
+    margin: 0;
+    text-align: center;
 }
 
 .sub-title {
     margin-top: 5px;
-    font-weight: 300;
+    font-weight: 400;
+    text-align: center;
+    color: #828181;
 }
 
 .error-well {
     background-color: #ead3d2;
     width: 70%;
     padding: 5px 15px;
+    margin: auto;
     border-radius: 5px;
 }
 
