--- a/BuddyBot/src/Site.css
+++ b/BuddyBot/src/Site.css
@@ -133,16 +133,23 @@ footer {
     padding: 10px 15px;
     margin: 10px;
     display: inline-flex;
-}
-
-.bubble-grey {
-    color: #32353A;
-    background-color: #E3E8F1;
-}
-
-.bubble-blue {
     color: white;
     background-color: #2E5EFF;
+    transition: transform .2s;
+
+}
+
+.conversation-bubble:hover {
+    box-shadow: 0px 0px 20px 1px #dadada;
+    z-index: 2;
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1.1);
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.1);
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1.1);
+    transition: all 200ms ease-in;
+    transform: scale(1.1);
 }
 
 .github-link {
