--- a/BuddyBot/src/Site.css
+++ b/BuddyBot/src/Site.css
@@ -113,7 +113,7 @@ footer {
 }
 
 .info-well {
-    padding: 10px;
+    padding: 5px 10px;
     background-color: #D9EDF6;
     border-radius: 5px;
     width: 70%;
