--- a/BuddyBot/src/Site.css
+++ b/BuddyBot/src/Site.css
@@ -186,9 +186,23 @@ footer {
         color: inherit;
 }
 
+.footer-legal-link {
+    font-size: 11px;
+    background-image: none;
+    text-decoration: none;
+    color: #828181;
+    padding: 0 5px;
+}
+
+.footer-link:hover {
+    font-weight: 500;
+    color: #636262;
+    border-bottom: 2px solid #828181;
+}
+
 .github-link img {
-        height: 40px;
-        width: 40px;
+    height: 40px;
+    width: 40px;
 }
 
 .footer-tagline{
